Add Focus Mode with timer and proficiency scoring

--- a/flashcards/templates/flashcards/all_focus_blocks.html
+++ b/flashcards/templates/flashcards/all_focus_blocks.html
@@ -1,6 +1,6 @@
 {% extends 'flashcards/base.html' %}
 
-{% block title %}Focus Blocks - Navvar{% endblock %}
+{% block title %}Focus Blocks - Exocortex{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
