corrected bulk upload, timer features

--- a/flashcards/templates/flashcards/base.html
+++ b/flashcards/templates/flashcards/base.html
@@ -119,6 +119,12 @@
                             <i class="fas fa-user me-1"></i>Account
                         </a>
                         <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="{% url 'flashcards:focus_schedule' %}">
+                                    <i class="fas fa-calendar-alt me-2"></i>Focus Schedule
+                                </a>
+                            </li>
+                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/admin/"><i class="fas fa-cog me-2"></i>Admin</a></li>
                         </ul>
                     </li>
