just test deployment

--- a/flashcards/templates/flashcards/study.html
+++ b/flashcards/templates/flashcards/study.html
@@ -1,6 +1,6 @@
 {% extends 'flashcards/base.html' %}
 
-{% block title %}Study: {{ folder.name }} - Flashcard Generator{% endblock %}
+{% block title %}Study: {{ folder.name }} - Exocortex{% endblock %}
 
 {% block content %}
 <div class="row mb-4">
