--- a/flashcards/templates/flashcards/add_folder.html
+++ b/flashcards/templates/flashcards/add_folder.html
@@ -1,6 +1,6 @@
 {% extends 'flashcards/base.html' %}
 
-{% block title %}Add Folder - Flashcard Generator{% endblock %}
+{% block title %}Add Folder - Exocortex{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
