corrected the all focus blocks view

--- a/flashcards/templates/flashcards/all_focus_blocks.html
+++ b/flashcards/templates/flashcards/all_focus_blocks.html
@@ -1078,3 +1078,8 @@ async function startBlockSession(focusBlockId) {
         return null;
     }
 }
+</script>
+
+<!-- Close the main container -->
+</div>
+{% endblock %}
